<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        tools:context="com.example.android.quizapp.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/question1"
            style="@style/QuestionTextStyle"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer1a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/answer_1a" />

            <RadioButton
                android:id="@+id/answer1b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/answer_1b" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question2"
            style="@style/QuestionTextStyle"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer2a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/answer_2a" />

            <RadioButton
                android:id="@+id/answer2b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/answer_2b" />

            <RadioButton
                android:id="@+id/answer2c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/answer_2c" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question3"
            style="@style/QuestionTextStyle"
            android:text="@string/question_3" />

        <EditText
            android:id="@+id/answer3"
            style="@style/EditTextStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question4"
            style="@style/QuestionTextStyle"
            android:text="@string/question_4" />

        <EditText
            android:id="@+id/answer4"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question5"
            style="@style/QuestionTextStyle"
            android:text="@string/question_5" />

        <RadioGroup
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer5a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer_5a" />

            <RadioButton
                android:id="@+id/answer5b"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer_5b" />

            <RadioButton
                android:id="@+id/answer5c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer_5c" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question6"
            style="@style/QuestionTextStyle"
            android:text="@string/question_6" />

        <EditText
            android:id="@+id/answer6"
            style="@style/EditTextStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question7"
            style="@style/QuestionTextStyle"
            android:text="@string/question_7" />

        <RadioGroup
            android:id="@+id/answer7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer7a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer_7a" />

            <RadioButton
                android:id="@+id/answer7b"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer_7b" />

            <RadioButton
                android:id="@+id/answer7c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer_7c" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question8"
            style="@style/QuestionTextStyle"
            android:text="@string/question_8" />

        <CheckBox
            android:id="@+id/answer8a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/answer_8a" />

        <CheckBox
            android:id="@+id/answer8b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/answer_8b" />

        <CheckBox
            android:id="@+id/answer8c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/answer_8c" />

        <CheckBox
            android:id="@+id/answer8d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/answer_8d" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question9"
            style="@style/QuestionTextStyle"
            android:text="@string/question_9" />

        <EditText
            android:id="@+id/answer9"
            style="@style/EditTextStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question10"
            style="@style/QuestionTextStyle"
            android:text="@string/question_10" />

        <EditText
            android:id="@+id/answer10"
            style="@style/EditTextStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="calculateScore"
            android:text="@string/button_text" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="resetQuiz"
            android:text="@string/button_reset" />
    </LinearLayout>
</ScrollView>
